# OpenGL-Engine

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
data/anim/: simple_cube_1.dae  simple_cube_2.dae
data/geometry/: meshdb.json
data/materials/: basic.json
data/scenes/: simple.json
data/shaders/: mesh.fs  mesh.vs  simple.vs  skeleton_mesh.fs  skeleton_mesh.vs
dep/: CMakeLists.txt
dep/assimp-4.1.0/include/assimp/: config.h
dep/glfw-3.2.1/: CMakeLists.txt
inc/: opengl_engine.h
inc/engine/: engine.h
inc/engine/input/: input_map.h
inc/engine/scripts/: camera_script.h
inc/graphics/: graphics.h
inc/graphics/data/: anim_node.h  animation.h  bone_node.h  data_types.h  keyframe.h  mesh.h  mesh_db.h  skeleton.h  skeleton_mesh.h
inc/graphics/image/: save_image.h
inc/graphics/ogl/: mesh_buffer.h  render.h  shader.h  skeleton_mesh_buffer.h
inc/graphics/scene/: camera_component.h  component.h  mesh_component.h  node.h  scene.h  script_component.h  skeleton_mesh_component.h  transform.h
inc/io/: io.h
inc/io/image/: save_image.h
lib/win32/: assimp32.lib
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  camera_script.cpp  input_map.cpp
src/graphics/: CMakeLists.txt  anim_node.cpp  animation.cpp  camera_component.cpp  mesh.cpp  mesh_buffer.cpp  mesh_db.cpp  node.cpp  render.cpp  save_image.cpp  scene.cpp  shader.cpp  skeleton.cpp  skeleton_mesh.cpp  skeleton_mesh_buffer.cpp  transform.cpp
src/io/: CMakeLists.txt  save_image.cpp
src/test/: CMakeLists.txt  test_save_image.cpp
